--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.0-alpha1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.5</version>
+        </dependency>
+
+
 
     </dependencies>
 
